k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smart-contract-rewriter
  labels:
    name: smart-contract-rewriter
